--- a/gnutls/PKGBUILD
+++ b/gnutls/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=gnutls
-pkgver=3.7.4
-pkgrel=2
+pkgver=3.7.6
+pkgrel=1
 pkgdesc="A library which provides a secure layer over a reliable transport layer"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL3' 'LGPL2.1')
@@ -12,18 +12,25 @@ url="https://www.gnutls.org/"
 options=('!zipman' 'debug')
 depends=('gcc-libs' 'libtasn1' 'readline' 'zlib' 'nettle' 'p11-kit' 'libidn2'
          'libidn2.so' 'libunistring' 'brotli')
-checkdepends=('net-tools')
-optdepends=('guile: for use with Guile bindings')
+makedepends=('tpm2-tss')
+checkdepends=('net-tools' 'tpm2-tools')
+optdepends=('guile: for use with Guile bindings'
+            'tpm2-tss: support for TPM2 wrapped keys'
+            'zstd: for compression support')
 source=(https://www.gnupg.org/ftp/gcrypt/gnutls/v3.7/${pkgname}-${pkgver}.tar.xz{,.sig})
-sha256sums=('e6adbebcfbc95867de01060d93c789938cf89cc1d1f6ef9ef661890f6217451f'
+sha256sums=('77065719a345bfb18faa250134be4c53bef70c1bd61f6c0c23ceb8b44f0262ff'
             'SKIP')
-validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871') # "Daiki Ueno <ueno@unixuser.org>"
+#validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871') # "Daiki Ueno <ueno@unixuser.org>"
+validpgpkeys=('5D46CB0F763405A7053556F47A75A648B3F9220C') # "Zoltan Fridrich <zfridric@redhat.com>"
 
 build() {
   cd ${pkgname}-${pkgver}
   ./configure --prefix=/usr \
 	--disable-static \
 	--with-idn \
+	--with-brotli \
+	--with-zstd \
+	--with-tpm2 \
 	--enable-openssl-compatibility \
 	--enable-guile --with-guile-site-dir=no \
 	--with-default-trust-store-pkcs11="pkcs11:"
@@ -34,7 +41,9 @@ build() {
 
 check() {
   cd ${pkgname}-${pkgver}
-  make check
+  # disable parallel tests:
+  # FAIL: serv-udp.sh
+  make -j1 check
 }
 
 package() {
