--- a/nilfs-utils/PKGBUILD
+++ b/nilfs-utils/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=nilfs-utils
 pkgver=2.2.8
 pkgrel=3
 pkgdesc="A log-structured file system supporting continuous snapshotting (userspace utils)"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://nilfs.sourceforge.net/"
 license=('GPL2' 'LGPL2.1')
 backup=('etc/nilfs_cleanerd.conf')
@@ -17,7 +17,7 @@ md5sums=('feb4fbf72679cb6449935d720b161aec')
 build() {
   cd $pkgname-$pkgver
   sed -i -e 's#root_sbindir=/sbin#root_sbindir=/usr/bin#' configure
-  ./configure --sbindir=/usr/bin --with-libmount
+  ./configure --sbindir=/usr/bin --with-libmount --build=${CHOST}
   make
 }
 
