* update perl-archive-cpio to 0.10-7

--- a/perl/perl-archive-cpio/PKGBUILD
+++ b/perl/perl-archive-cpio/PKGBUILD
@@ -4,10 +4,10 @@
 pkgname=perl-archive-cpio
 _cpanname=Archive-Cpio
 pkgver=0.10
-pkgrel=6
+pkgrel=7
 pkgdesc='module for manipulations of cpio archives'
 url='https://metacpan.org/pod/Archive::Cpio'
-arch=('any')
+arch=(any)
 license=('unknown')
 depends=('perl>=5.10.0')
 options=('!emptydirs')
