--- a/perl/perl-class-tiny/PKGBUILD
+++ b/perl/perl-class-tiny/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-class-tiny
 pkgver=1.008
-pkgrel=2
+pkgrel=3
 pkgdesc="Minimalist class construction"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Class-Tiny"
 depends=('perl')
