--- a/perl/perl-class-inspector/PKGBUILD
+++ b/perl/perl-class-inspector/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-class-inspector
 pkgver=1.36
-pkgrel=4
+pkgrel=5
 pkgdesc="Get information about a class and its structure"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Class-Inspector"
 license=('PerlArtistic' 'GPL')
 depends=('perl')
