--- a/perl/perl-canary-stability/PKGBUILD
+++ b/perl/perl-canary-stability/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-canary-stability
 _realname=Canary-Stability
 pkgver=2013
-pkgrel=4
+pkgrel=5
 pkgdesc="CPAN/Canary-Stability - canary to check perl compatability for schmorp's modules"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
