* update perl-extutils-depends to 0.8001-3

--- a/perl/perl-extutils-depends/PKGBUILD
+++ b/perl/perl-extutils-depends/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=perl-extutils-depends
 pkgver=0.8001
-pkgrel=2
+pkgrel=3
 pkgdesc="The Perl depends module"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/ExtUtils-Depends/"
 license=('PerlArtistic')
 depends=('perl')
