* update perl-encode-locale to 1.05-9

--- a/perl/perl-encode-locale/PKGBUILD
+++ b/perl/perl-encode-locale/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-encode-locale
 pkgver=1.05
-pkgrel=8
+pkgrel=9
 pkgdesc="Determine the locale encoding"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Encode-Locale"
 license=('PerlArtistic' 'GPL')
 depends=('perl')
