--- a/perl/perl-extutils-config/PKGBUILD
+++ b/perl/perl-extutils-config/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-extutils-config
 _pkgname=ExtUtils-Config
 pkgver=0.008
-pkgrel=7
+pkgrel=8
 pkgdesc="ExtUtils::Config - A wrapper for perl's configuration"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 url="https://search.cpan.org/dist/ExtUtils-Config/"
 options=(!emptydirs)
