* update perl-common-sense to 3.75-4

--- a/perl/perl-common-sense/PKGBUILD
+++ b/perl/perl-common-sense/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-common-sense
 pkgver=3.75
-pkgrel=3
+pkgrel=4
 pkgdesc="Implements some sane defaults for Perl programs"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/common-sense"
 license=('PerlArtistic' 'GPL')
 depends=('perl')
