--- a/perl/perl-exception-class/PKGBUILD
+++ b/perl/perl-exception-class/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-exception-class
 pkgver=1.45
-pkgrel=1
+pkgrel=2
 pkgdesc='A module that allows you to declare real exception classes in Perl'
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/Exception-Class"
 license=('PerlArtistic' 'GPL')
 depends=('perl>=5.8.1' 'perl-class-data-inheritable>=0.02' 'perl-devel-stacktrace>=2.00')
