--- a/perl/perl-exporter-tiny/PKGBUILD
+++ b/perl/perl-exporter-tiny/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-exporter-tiny
 pkgver=1.002002
-pkgrel=3
+pkgrel=4
 pkgdesc="an exporter with the features of Sub::Exporter but only core dependencies"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
