* update perl-cpan-meta to 2.150010-11

--- a/perl/perl-cpan-meta/PKGBUILD
+++ b/perl/perl-cpan-meta/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-cpan-meta
 pkgver=2.150010
-pkgrel=10
+pkgrel=11
 pkgdesc='the distribution metadata for a CPAN dist'
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl>=5.8' 'perl-cpan-meta-requirements>=2.121'
