* update perl-devel-stacktrace to 2.04-2

--- a/perl/perl-devel-stacktrace/PKGBUILD
+++ b/perl/perl-devel-stacktrace/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-devel-stacktrace
 pkgver=2.04
-pkgrel=1
+pkgrel=2
 pkgdesc='An object representing a stack trace'
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/Devel-StackTrace"
 license=('PerlArtistic' 'GPL')
 depends=('perl>=5.6')
