--- a/perl/perl-extutils-helpers/PKGBUILD
+++ b/perl/perl-extutils-helpers/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-extutils-helpers
 _pkgname=ExtUtils-Helpers
 pkgver=0.026
-pkgrel=7
+pkgrel=8
 pkgdesc='ExtUtils::Helpers - Various portability utilities for module builders'
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 url="https://search.cpan.org/dist/ExtUtils-Helpers/"
 options=('!emptydirs')
