--- a/perl/perl-io-html/PKGBUILD
+++ b/perl/perl-io-html/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-io-html
 pkgver=1.004
-pkgrel=2
+pkgrel=3
 pkgdesc="Open an HTML file with automatic charset detection"
-arch=('any')
+arch=(any)
 url='https://search.cpan.org/dist/IO-HTML'
 depends=('perl')
 license=('PerlArtistic' 'GPL')
