--- a/perl/perl-extutils-pkgconfig/PKGBUILD
+++ b/perl/perl-extutils-pkgconfig/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-extutils-pkgconfig
 pkgver=1.16
-pkgrel=8
+pkgrel=9
 pkgdesc="The Perl Pkgconfig module"
-arch=('any')
+arch=(any)
 url="http://gtk2-perl.sourceforge.net/"
 license=('LGPL')
 depends=('perl')
