* update perl-io-socket-inet6 to 2.73-2

--- a/perl/perl-io-socket-inet6/PKGBUILD
+++ b/perl/perl-io-socket-inet6/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname='perl-io-socket-inet6'
 pkgver=2.73
-pkgrel=1
+pkgrel=2
 pkgdesc="Object interface for AF_INET|AF_INET6 domain sockets"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-socket6>=0.12')
