--- a/perl/perl-importer/PKGBUILD
+++ b/perl/perl-importer/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-importer
 pkgver=0.026
-pkgrel=2
+pkgrel=3
 pkgdesc="Alternative but compatible interface to modules that export symbols."
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Importer"
 depends=('perl')
