--- a/perl/perl-file-slurp-tiny/PKGBUILD
+++ b/perl/perl-file-slurp-tiny/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-file-slurp-tiny
 pkgver=0.004
-pkgrel=7
+pkgrel=8
 pkgdesc="A simple, sane and efficient file slurper"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
