* update perl-html-tagset to 3.20-12

--- a/perl/perl-html-tagset/PKGBUILD
+++ b/perl/perl-html-tagset/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-html-tagset
 pkgver=3.20
-pkgrel=11
+pkgrel=12
 pkgdesc="Data tables useful in parsing HTML"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://search.cpan.org/dist/HTML-Tagset/"
 depends=('perl')
