--- a/perl/perl-locale-gettext/PKGBUILD
+++ b/perl/perl-locale-gettext/PKGBUILD
@@ -6,13 +6,12 @@
 pkgname=perl-locale-gettext
 _realname=Locale-gettext
 pkgver=1.07
-pkgrel=11
+pkgrel=12
 pkgdesc="Permits access from Perl to the gettext() family of functions"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL' 'PerlArtistic')
 url="https://search.cpan.org/dist/${_realname}/"
-#depends=('gettext' 'perl')
-depends=('perl')
+depends=('gettext' 'perl')
 options=(!emptydirs)
 source=("https://search.cpan.org/CPAN/authors/id/P/PV/PVANDRY/${_realname}-${pkgver}.tar.gz")
 md5sums=('bc652758af65c24500f1d06a77415019')
