* update perl-par-dist to 0.51-3

--- a/perl/perl-par-dist/PKGBUILD
+++ b/perl/perl-par-dist/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-par-dist
 pkgver=0.51
-pkgrel=2
+pkgrel=3
 pkgdesc="Perl bindings to create and manipulate PAR distributions"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/PAR-Dist/"
 license=('GPL' 'PerlArtistic')
 depends=('perl')
