* update perl-number-compare to 0.03-12

--- a/perl/perl-number-compare/PKGBUILD
+++ b/perl/perl-number-compare/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname='perl-number-compare'
 _dist="Number-Compare"
 pkgver=0.03
-pkgrel=11
+pkgrel=12
 pkgdesc="numeric comparisons for human file sizes"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
