--- a/perl/perl-lingua-en-inflect/PKGBUILD
+++ b/perl/perl-lingua-en-inflect/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-lingua-en-inflect
 pkgver=1.905
-pkgrel=2
+pkgrel=3
 pkgdesc='Convert singular to plural. Select "a" or "an"'
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Lingua-EN-Inflect"
 depends=('perl')
