--- a/perl/perl-ipc-run3/PKGBUILD
+++ b/perl/perl-ipc-run3/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname='perl-ipc-run3'
 _dist=IPC-Run3
 pkgver=0.048
-pkgrel=9
+pkgrel=10
 pkgdesc="run a subprocess with input/ouput redirection"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
