--- a/perl/perl-module-pluggable/PKGBUILD
+++ b/perl/perl-module-pluggable/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-module-pluggable
 pkgver=5.2
-pkgrel=7
+pkgrel=8
 pkgdesc='automatically give your module the ability to have plugins'
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
