--- a/perl/perl-scope-guard/PKGBUILD
+++ b/perl/perl-scope-guard/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-scope-guard
 pkgver=0.21
-pkgrel=4
+pkgrel=5
 pkgdesc="Lexically-scoped resource management"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Scope-Guard"
 depends=('perl')
