--- a/perl/perl-string-format/PKGBUILD
+++ b/perl/perl-string-format/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-string-format
 pkgver=1.18
-pkgrel=4
+pkgrel=5
 pkgdesc="sprintf-like string formatting capabilities with arbitrary format definitions"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/String-Format"
 depends=('perl')
