--- a/perl/perl-probe-perl/PKGBUILD
+++ b/perl/perl-probe-perl/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-probe-perl
 pkgver=0.03
-pkgrel=4
+pkgrel=5
 pkgdesc="Information about the currently running perl"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Probe-Perl"
 depends=('perl')
