--- a/perl/perl-shell-guess/PKGBUILD
+++ b/perl/perl-shell-guess/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-shell-guess
 pkgver=0.09
-pkgrel=4
+pkgrel=5
 pkgdesc="Make an educated guess about the shell in use"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Shell-Guess"
 depends=('perl')
