* update perl-pod-parser to 1.65-1

--- a/perl/perl-pod-parser/PKGBUILD
+++ b/perl/perl-pod-parser/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=perl-pod-parser
-pkgver=1.63
-pkgrel=2
+pkgver=1.65
+pkgrel=1
 pkgdesc="Modules for parsing/translating POD format documents"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Pod-Parser"
 depends=('perl')
 options=('!emptydirs')
 source=("https://cpan.metacpan.org/authors/id/M/MA/MAREKR/Pod-Parser-$pkgver.tar.gz")
-sha512sums=('55f5741bb906701705f489b2314d3f11cd6d63ca5b64a60fdbda7eed0388945f2e68262735c7cc33b7089794630393049e619f9900e85c71bf9223243bc0984a')
+sha512sums=('0449ff9fcf8cbb5724d48d27da332a8c281c4412d0aa28464852f1557825070a729df2c620276f141effaeea742a840c8fc391261d8c8165a615cd539bbcce36')
 
 build() {
   cd Pod-Parser-$pkgver
