* update perl-task-weaken to 1.06-5

--- a/perl/perl-task-weaken/PKGBUILD
+++ b/perl/perl-task-weaken/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-task-weaken
 pkgver=1.06
-pkgrel=4
+pkgrel=5
 pkgdesc="Ensure that a platform has weaken support"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Task-Weaken"
 depends=('perl')
