* update perl-test-pod to 1.52-7

--- a/perl/perl-test-pod/PKGBUILD
+++ b/perl/perl-test-pod/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-test-pod
 pkgver=1.52
-pkgrel=6
+pkgrel=7
 pkgdesc="Check for POD errors in files"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Test-Pod/"
 license=('GPL' 'PerlArtistic')
 depends=('perl')
