--- a/perl/perl-test-warnings/PKGBUILD
+++ b/perl/perl-test-warnings/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname='perl-test-warnings'
 pkgver=0.031
-pkgrel=2
+pkgrel=3
 pkgdesc="Test for warnings and the lack of them"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
