--- a/perl/perl-test-file/PKGBUILD
+++ b/perl/perl-test-file/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-test-file
 pkgver=1.992
-pkgrel=1
+pkgrel=2
 pkgdesc="This modules provides a collection of test utilities for file attributes."
-arch=('any')
+arch=(any)
 url='https://github.com/briandfoy/test-file'
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
