--- a/perl/perl-test-object/PKGBUILD
+++ b/perl/perl-test-object/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-object
 pkgver=0.08
-pkgrel=4
+pkgrel=5
 pkgdesc="Thoroughly testing objects via registered handlers"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-Object"
 depends=('perl')
