--- a/perl/perl-test-requires/PKGBUILD
+++ b/perl/perl-test-requires/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-test-requires
 pkgver=0.11
-pkgrel=3
+pkgrel=4
 pkgdesc="Checks to see if the module can be loaded"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
