--- a/perl/perl-test-needs/PKGBUILD
+++ b/perl/perl-test-needs/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-needs
 pkgver=0.002009
-pkgrel=2
+pkgrel=3
 pkgdesc="Skip tests when modules not available"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-Needs"
 depends=('perl')
