* update perl-xml-simple to 2.25-7

--- a/perl/perl-xml-simple/PKGBUILD
+++ b/perl/perl-xml-simple/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname=perl-xml-simple
 _realname=XML-Simple
 pkgver=2.25
-pkgrel=6
+pkgrel=7
 pkgdesc="Simple XML parser for perl"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://search.cpan.org/dist/${_realname}/"
 depends=('perl-xml-sax-expat')
