* update perl-try-tiny to 0.31-2

--- a/perl/perl-try-tiny/PKGBUILD
+++ b/perl/perl-try-tiny/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-try-tiny
 pkgver=0.31
-pkgrel=1
+pkgrel=2
 pkgdesc="Minimal try/catch with proper localization of \$@"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Try-Tiny"
 license=('MIT')
 depends=('perl')
