* update perl-yaml-pp to 0.031-2

--- a/perl/perl-yaml-pp/PKGBUILD
+++ b/perl/perl-yaml-pp/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Ash Berlin-Taylor <ash_archlinux@firemirror.com>
 pkgname='perl-yaml-pp'
 pkgver=0.031
-pkgrel=1
+pkgrel=2
 pkgdesc="Simple configuration automation"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl>=0')
