* update perl-test-yaml to 1.07-6

--- a/perl/perl-test-yaml/PKGBUILD
+++ b/perl/perl-test-yaml/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-yaml
 pkgver=1.07
-pkgrel=5
+pkgrel=6
 pkgdesc="Testing Module for YAML Implementations"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Test-YAML/"
 license=('GPL' 'PerlArtistic')
 depends=('perl-test-base')
