--- a/perl/perl-yaml-tiny/PKGBUILD
+++ b/perl/perl-yaml-tiny/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-yaml-tiny
 pkgver=1.73
-pkgrel=5
+pkgrel=6
 pkgdesc="Read/Write YAML files with as little code as possible"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
