--- a/perl/perl-timedate/PKGBUILD
+++ b/perl/perl-timedate/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-timedate
 pkgver=2.33
-pkgrel=3
+pkgrel=4
 pkgdesc="Date formating subroutines"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://search.cpan.org/dist/TimeDate/"
 depends=('perl')
