--- a/perl/perl-text-glob/PKGBUILD
+++ b/perl/perl-text-glob/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname='perl-text-glob'
 _dist="Text-Glob"
 pkgver=0.11
-pkgrel=8
+pkgrel=9
 pkgdesc="match globbing patterns against text"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
