* update perl-data-munge to 0.097-5

--- a/perl/perl-data-munge/PKGBUILD
+++ b/perl/perl-data-munge/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-data-munge
 pkgver=0.097
-pkgrel=4
+pkgrel=5
 pkgdesc="Various utility functions"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Data-Munge"
 depends=('perl')
