--- a/perl/perl-http-date/PKGBUILD
+++ b/perl/perl-http-date/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-http-date
 pkgver=6.05
-pkgrel=4
+pkgrel=5
 pkgdesc="Date conversion routines"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/HTTP-Date"
 license=('PerlArtistic' 'GPL')
 depends=('perl-timedate')
