--- a/perl/perl-file-copy-recursive-reduced/PKGBUILD
+++ b/perl/perl-file-copy-recursive-reduced/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-file-copy-recursive-reduced
 pkgver=0.006
-pkgrel=5
+pkgrel=6
 pkgdesc="Recursive copying of files and directories within Perl 5 toolchain"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
