--- a/perl/perl-hook-lexwrap/PKGBUILD
+++ b/perl/perl-hook-lexwrap/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-hook-lexwrap
 pkgver=0.26
-pkgrel=4
+pkgrel=5
 pkgdesc="Lexically-scoped resource management"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Hook-LexWrap"
 depends=('perl')
