* update perl-extutils-installpaths to 0.012-6

--- a/perl/perl-extutils-installpaths/PKGBUILD
+++ b/perl/perl-extutils-installpaths/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-extutils-installpaths
 _pkgname=ExtUtils-InstallPaths
 pkgver=0.012
-pkgrel=5
+pkgrel=6
 pkgdesc="ExtUtils::InstallPaths - Build.PL install path logic made easy"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 url="https://search.cpan.org/dist/ExtUtils-InstallPaths/"
 options=('!emptydirs')
