* update perl-error to 0.17029-4

--- a/perl/perl-error/PKGBUILD
+++ b/perl/perl-error/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=perl-error
 pkgver=0.17029
-pkgrel=3
+pkgrel=4
 pkgdesc="Perl/CPAN Error module - Error/exception handling in an OO-ish way"
 url="https://search.cpan.org/dist/Error/"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 depends=('perl')
 checkdepends=('perl-test-pod' 'perl-test-pod-coverage')
