* update perl-file-find-rule to 0.34-9

--- a/perl/perl-file-find-rule/PKGBUILD
+++ b/perl/perl-file-find-rule/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname='perl-file-find-rule'
 _dist="File-Find-Rule"
 pkgver=0.34
-pkgrel=8
+pkgrel=9
 pkgdesc="Alternative interface to File::Find"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-number-compare' 'perl-text-glob>=0.07')
