* update perl-file-homedir to 1.006-3

--- a/perl/perl-file-homedir/PKGBUILD
+++ b/perl/perl-file-homedir/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-file-homedir
 pkgver=1.006
-pkgrel=2
+pkgrel=3
 pkgdesc="Find your home and other directories on any platform"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/File-HomeDir"
 depends=('perl-file-which')
