* update perl-file-sharedir-install to 0.13-6

--- a/perl/perl-file-sharedir-install/PKGBUILD
+++ b/perl/perl-file-sharedir-install/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-file-sharedir-install
 pkgver=0.13
-pkgrel=5
+pkgrel=6
 pkgdesc="File::ShareDir::Install - Install read-only data files from a distribution"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/File-ShareDir-Install"
 license=('GPL' 'PerlArtistic')
 checkdepends=('perl-test-pod' 'perl-test-pod-coverage')
