* update perl-list-moreutils to 0.430-3

--- a/perl/perl-list-moreutils/PKGBUILD
+++ b/perl/perl-list-moreutils/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-list-moreutils
 pkgver=0.430
-pkgrel=2
+pkgrel=3
 pkgdesc="Provide the stuff missing in List::Util"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-exporter-tiny' 'perl-list-moreutils-xs')
