--- a/perl/perl-sub-info/PKGBUILD
+++ b/perl/perl-sub-info/PKGBUILD
@@ -4,9 +4,9 @@
 pkgname=perl-sub-info
 _cpanname=Sub-Info
 pkgver=0.002
-pkgrel=8
+pkgrel=9
 pkgdesc="Tool for inspecting subroutines."
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 depends=('perl-importer')
 options=('!emptydirs')
