* update perl-module-scandeps to 1.31-3

--- a/perl/perl-module-scandeps/PKGBUILD
+++ b/perl/perl-module-scandeps/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-module-scandeps
 _pkgname=Module-ScanDeps
 pkgver=1.31
-pkgrel=2
+pkgrel=3
 pkgdesc="Scan file prerequisites"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
