* update perl-mailtools to 2.21-6

--- a/perl/perl-mailtools/PKGBUILD
+++ b/perl/perl-mailtools/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-mailtools
 pkgver=2.21
-pkgrel=5
+pkgrel=6
 pkgdesc="Various e-mail related modules"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/MailTools"
 license=('PerlArtistic' 'GPL')
 depends=('perl-timedate')
