--- a/perl/perl-term-table/PKGBUILD
+++ b/perl/perl-term-table/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-term-table
 pkgver=0.016
-pkgrel=1
+pkgrel=2
 pkgdesc="Format a header and rows into a table"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Term-Table"
 depends=('perl-importer')
