--- a/perl/perl-inc-latest/PKGBUILD
+++ b/perl/perl-inc-latest/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-inc-latest
 pkgver=0.500
-pkgrel=8
+pkgrel=9
 pkgdesc="Build, test, and install Perl modules"
-arch=('any')
+arch=(any)
 url="https://github.com/dagolden/inc-latest"
 license=('Apache')
 depends=('perl')
