* update perl-test-fatal to 0.016-3

--- a/perl/perl-test-fatal/PKGBUILD
+++ b/perl/perl-test-fatal/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-test-fatal
 pkgver=0.016
-pkgrel=2
+pkgrel=3
 pkgdesc="Incredibly simple helpers for testing code with exceptions"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/Test-Fatal"
 license=('PerlArtistic' 'GPL')
 depends=('perl-try-tiny')
