* update perl-yaml to 1.30-4

--- a/perl/perl-yaml/PKGBUILD
+++ b/perl/perl-yaml/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-yaml
 pkgver=1.30
-pkgrel=3
+pkgrel=4
 pkgdesc="Perl/CPAN Module YAML : YAML Aint Markup Language"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/YAML/"
 license=('GPL' 'PerlArtistic')
 depends=('perl')
