* update perl-uri to 5.10-2

--- a/perl/perl-uri/PKGBUILD
+++ b/perl/perl-uri/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-uri
 pkgver=5.10
-pkgrel=1
+pkgrel=2
 pkgdesc="Uniform Resource Identifiers (absolute and relative)"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/URI/"
 license=('PerlArtistic')
 depends=('perl')
