--- a/perl/perl-mime-charset/PKGBUILD
+++ b/perl/perl-mime-charset/PKGBUILD
@@ -6,9 +6,9 @@
 pkgname='perl-mime-charset'
 _dist="MIME-Charset"
 pkgver='1.012.2'
-pkgrel=8
+pkgrel=9
 pkgdesc="Charset Information for MIME"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
