* update perl-lwp-mediatypes to 6.04-2

--- a/perl/perl-lwp-mediatypes/PKGBUILD
+++ b/perl/perl-lwp-mediatypes/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-lwp-mediatypes
 pkgver=6.04
-pkgrel=1
+pkgrel=2
 pkgdesc="Guess the media type of a file or a URL"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/LWP-MediaTypes"
 depends=('perl')
 checkdepends=('perl-test-fatal')
