--- a/perl/perl-module-build-tiny/PKGBUILD
+++ b/perl/perl-module-build-tiny/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=perl-module-build-tiny
 _pkgname=Module-Build-Tiny
 pkgver=0.039
-pkgrel=7
+pkgrel=8
 pkgdesc="A tiny replacement for Module::Build"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl' 'perl-extutils-config' 'perl-extutils-helpers' 'perl-extutils-installpaths')
