--- a/perl/perl-net-http/PKGBUILD
+++ b/perl/perl-net-http/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-net-http
 pkgver=6.22
-pkgrel=1
+pkgrel=2
 pkgdesc="Low-level HTTP connection (client)"
-arch=('any')
+arch=(any)
 url=https://search.cpan.org/dist/Net-HTTP
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
