--- a/perl/perl-file-copy-recursive/PKGBUILD
+++ b/perl/perl-file-copy-recursive/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-file-copy-recursive
 pkgver=0.45
-pkgrel=4
+pkgrel=5
 pkgdesc="Perl extension for recursively copying files and directories"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/File-Copy-Recursive"
 license=('GPL' 'PerlArtistic')
 depends=('perl')
