--- a/perl/perl-super/PKGBUILD
+++ b/perl/perl-super/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-super
 pkgver=1.20190531
-pkgrel=4
+pkgrel=5
 pkgdesc="Control superclass method dispatch"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-sub-identify')
