--- a/perl/perl-www-robotrules/PKGBUILD
+++ b/perl/perl-www-robotrules/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-www-robotrules
 pkgver=6.02
-pkgrel=9
+pkgrel=10
 pkgdesc="Database of robots.txt-derived permissions"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/WWW-RobotRules"
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-uri')
