* update perl-pegex to 0.75-3

--- a/perl/perl-pegex/PKGBUILD
+++ b/perl/perl-pegex/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname='perl-pegex'
 pkgver=0.75
-pkgrel=2
+pkgrel=3
 pkgdesc="Acmeist PEG Parser Framework"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-yaml-libyaml' 'perl-file-sharedir-install' 'perl-yaml-pp')
