* update perl-test-subcalls to 1.10-5

--- a/perl/perl-test-subcalls/PKGBUILD
+++ b/perl/perl-test-subcalls/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-subcalls
 pkgver=1.10
-pkgrel=4
+pkgrel=5
 pkgdesc="Track the number of times subs are called"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-SubCalls"
 depends=('perl-hook-lexwrap')
