* update perl-sub-override to 0.09-4

--- a/perl/perl-sub-override/PKGBUILD
+++ b/perl/perl-sub-override/PKGBUILD
@@ -4,10 +4,10 @@
 pkgname=perl-sub-override
 _cpanname=Sub-Override
 pkgver=0.09
-pkgrel=3
+pkgrel=4
 pkgdesc='Perl extension for easily overriding subroutines'
 url='https://search.cpan.org/dist/Term-ExtendedColor'
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 depends=('perl')
 checkdepends=('perl-test-fatal')
