* update perl-return-multilevel to 0.08-2

--- a/perl/perl-return-multilevel/PKGBUILD
+++ b/perl/perl-return-multilevel/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-return-multilevel
 pkgver=0.08
-pkgrel=1
+pkgrel=2
 pkgdesc="Return across multiple call levels"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Return-MultiLevel"
 depends=('perl-data-munge')
