* update perl-pod-spell to 1.20-5

--- a/perl/perl-pod-spell/PKGBUILD
+++ b/perl/perl-pod-spell/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-pod-spell
 pkgver=1.20
-pkgrel=4
+pkgrel=5
 pkgdesc="A formatter for spellchecking Pod"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Pod-Spell"
 depends=('perl-class-tiny' 'perl-file-sharedir' 'perl-lingua-en-inflect' 'perl-path-tiny'
