* update perl-test-script to 1.29-3

--- a/perl/perl-test-script/PKGBUILD
+++ b/perl/perl-test-script/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-script
 pkgver=1.29
-pkgrel=2
+pkgrel=3
 pkgdesc="Basic cross-platform tests for scripts"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-Script"
 depends=('perl-capture-tiny' 'perl-probe-perl' 'perl-test2-suite')
