* update perl-inline-c to 0.82-2

--- a/perl/perl-inline-c/PKGBUILD
+++ b/perl/perl-inline-c/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-inline-c
 pkgver=0.82
-pkgrel=1
+pkgrel=2
 pkgdesc="C Language Support for Inline"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Inline-C"
 depends=('perl-inline' 'perl-parse-recdescent' 'perl-pegex')
