* update perl-shell-config-generate to 0.34-4

--- a/perl/perl-shell-config-generate/PKGBUILD
+++ b/perl/perl-shell-config-generate/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-shell-config-generate
 pkgver=0.34
-pkgrel=3
+pkgrel=4
 pkgdesc="Portably generate config for any shell"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Shell-Config-Generate"
 depends=('perl-shell-guess')
