* update perl-http-message to 6.36-2

--- a/perl/perl-http-message/PKGBUILD
+++ b/perl/perl-http-message/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-http-message
 pkgver=6.36
-pkgrel=1
+pkgrel=2
 pkgdesc="HTTP style messages"
-arch=('any')
+arch=(any)
 url='https://search.cpan.org/dist/HTTP-Message'
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
