--- a/perl/perl-test-exit/PKGBUILD
+++ b/perl/perl-test-exit/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-exit
 pkgver=0.11
-pkgrel=4
+pkgrel=5
 pkgdesc="Test whether code exits without terminating testing."
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-Exit"
 depends=('perl-return-multilevel')
