* update perl-inline-filters to 0.20-5

--- a/perl/perl-inline-filters/PKGBUILD
+++ b/perl/perl-inline-filters/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-inline-filters
 pkgver=0.20
-pkgrel=4
+pkgrel=5
 pkgdesc="Common source code filters for Inline Modules"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Inline-Filters"
 depends=('perl-inline' 'perl-inline-c')
