* update perl-http-cookies to 6.10-3

--- a/perl/perl-http-cookies/PKGBUILD
+++ b/perl/perl-http-cookies/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-http-cookies
 pkgver=6.10
-pkgrel=2
+pkgrel=3
 pkgdesc="HTTP cookie jars"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/HTTP-Cookies"
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-http-date' 'perl-http-message')
