* update perl-ppix-utils to 0.003-3

--- a/perl/perl-ppix-utils/PKGBUILD
+++ b/perl/perl-ppix-utils/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-ppix-utils
 pkgver=0.003
-pkgrel=2
+pkgrel=3
 pkgdesc="Utility functions for PPI"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/PPIx-Utils"
 depends=('perl-b-keywords' 'perl-ppi')
