--- a/perl/perl-http-daemon/PKGBUILD
+++ b/perl/perl-http-daemon/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=perl-http-daemon
-pkgver=6.13
-pkgrel=1
+pkgver=6.14
+pkgrel=2
 pkgdesc="Simple http server class"
-arch=('any')
+arch=(any)
 url='https://metacpan.org/pod/HTTP::Daemon'
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-http-date' 'perl-http-message' 'perl-lwp-mediatypes')
@@ -13,7 +13,7 @@ makedepends=('perl-module-build-tiny')
 checkdepends=('perl-test-needs')
 options=('!emptydirs')
 source=(https://cpan.metacpan.org/authors/id/O/OA/OALDERS/HTTP-Daemon-${pkgver}.tar.gz)
-sha256sums=('d184d1f3e51e690d60e4b00195aa69f679169c858f2aab419997c70892014516')
+sha256sums=('f0767e7f3cbb80b21313c761f07ad8ed253bce9fa2d0ba806b3fb72d309b2e1d')
 
 build() {
   cd "${srcdir}/HTTP-Daemon-${pkgver}"
