* update perl-ffi-checklib to 0.28-3

--- a/perl/perl-ffi-checklib/PKGBUILD
+++ b/perl/perl-ffi-checklib/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-ffi-checklib
 pkgver=0.28
-pkgrel=2
+pkgrel=3
 pkgdesc="Check that a library is available for FFI"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/FFI-CheckLib"
 depends=('perl')
