* update perl-http-negotiate to 6.01-10

--- a/perl/perl-http-negotiate/PKGBUILD
+++ b/perl/perl-http-negotiate/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-http-negotiate
 pkgver=6.01
-pkgrel=9
+pkgrel=10
 pkgdesc="Choose a variant to serve"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/HTTP-Negotiate"
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-http-message')
