--- a/perl/perl-ppix-utilities/PKGBUILD
+++ b/perl/perl-ppix-utilities/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-ppix-utilities
 pkgver=1.001000
-pkgrel=4
+pkgrel=5
 pkgdesc="Extensions to L<PPI|PPI>"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/PPIx-Utilities"
 depends=('perl-exception-class' 'perl-ppi' 'perl-readonly' 'perl-task-weaken')
