* update perl-perl-minimumversion to 1.40-3

--- a/perl/perl-perl-minimumversion/PKGBUILD
+++ b/perl/perl-perl-minimumversion/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-perl-minimumversion
 pkgver=1.40
-pkgrel=2
+pkgrel=3
 pkgdesc="Find a minimum required version of perl for Perl code"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Perl-MinimumVersion"
 depends=('perl-file-find-rule' 'perl-file-find-rule-perl' 'perl-ppi' 'perl-ppix-regexp'
