* update perl-test-minimumversion to 0.101082-5

--- a/perl/perl-test-minimumversion/PKGBUILD
+++ b/perl/perl-test-minimumversion/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-minimumversion
 pkgver=0.101082
-pkgrel=4
+pkgrel=5
 pkgdesc="Does your code require newer perl than you think?"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Test-MinimumVersion"
 depends=('perl-file-find-rule' 'perl-file-find-rule-perl' 'perl-perl-minimumversion')
