* update perl-pkgconfig to 0.25026-3

--- a/perl/perl-pkgconfig/PKGBUILD
+++ b/perl/perl-pkgconfig/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-pkgconfig
 pkgver=0.25026
-pkgrel=2
+pkgrel=3
 pkgdesc="Pure-Perl Core-Only replacement for pkg-config"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/PkgConfig"
 depends=('perl')
