--- a/perl/perl-xml-xpath/PKGBUILD
+++ b/perl/perl-xml-xpath/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-xml-xpath
 pkgver=1.44
-pkgrel=4
+pkgrel=5
 pkgdesc="A set of modules for parsing and evaluating XPath statements"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/XML-XPath"
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-xml-parser')
