--- a/perl/perl-archive-zip/PKGBUILD
+++ b/perl/perl-archive-zip/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-archive-zip
 pkgver=1.68
-pkgrel=5
+pkgrel=7
 pkgdesc="Provide a perl interface to ZIP archive files"
-arch=('any')
+arch=(any)
 license=('GPL' 'PerlArtistic')
 url="https://search.cpan.org/dist/Archive-Zip/"
 depends=('perl')
