* update perl-test-mockmodule to 0.177.0-3

--- a/perl/perl-test-mockmodule/PKGBUILD
+++ b/perl/perl-test-mockmodule/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-test-mockmodule
 pkgver=0.177.0
-pkgrel=1
+pkgrel=3
 pkgdesc="Override subroutines in a module for unit testing"
-arch=('any')
+arch=(any)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-super')
