--- a/perl/perl-extutils-cppguess/PKGBUILD
+++ b/perl/perl-extutils-cppguess/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=perl-extutils-cppguess
-pkgver=0.23
+pkgver=0.26
 pkgrel=1
 pkgdesc="Guess C++ compiler and flags"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/ExtUtils-CppGuess"
 depends=('perl-capture-tiny')
 makedepends=('perl-module-build')
 options=('!emptydirs')
 source=("https://cpan.metacpan.org/authors/id/E/ET/ETJ/ExtUtils-CppGuess-$pkgver.tar.gz")
-sha512sums=('f984f653cffd6288851af3e353532f369d229a8b903f8e0ba7c1a5e9d8bd1b63c3415403b45bf1e8c32dc5c330ed26d1351e37929bd22af271ac295adce737f9')
+sha512sums=('35e8e11f7df5d4a2a306cbe1df7a879291cb041677c740d95fc228e8ee812a127be4c70bc2ae6b25d3e73de69e1796539dacf3bb0b1a3311de3dea588335a225')
 
 build() {
   cd ExtUtils-CppGuess-$pkgver
