--- a/perl/perl-alien-base-modulebuild/PKGBUILD
+++ b/perl/perl-alien-base-modulebuild/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-alien-base-modulebuild
 pkgver=1.15
-pkgrel=3
+pkgrel=5
 pkgdesc="A Module::Build subclass for building Alien:: modules and their libraries"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Alien-Base-ModuleBuild"
 depends=('perl-alien-build' 'perl-archive-extract' 'perl-capture-tiny' 'perl-file-chdir'
