* update perl-alien-cmake3 to 0.08-3

--- a/perl/perl-alien-cmake3/PKGBUILD
+++ b/perl/perl-alien-cmake3/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-alien-cmake3
 pkgver=0.08
-pkgrel=1
+pkgrel=3
 pkgdesc="Find or download or build cmake 3 or better"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Alien-cmake3"
 depends=('cmake' 'perl-alien-build')
