* update perl-alien-libxml2 to 0.17-3

--- a/perl/perl-alien-libxml2/PKGBUILD
+++ b/perl/perl-alien-libxml2/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-alien-libxml2
 pkgver=0.17
-pkgrel=2
+pkgrel=3
 pkgdesc="Install the C libxml2 library on your system"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Alien-Libxml2"
 depends=('libxml2' 'perl-alien-build')
