--- a/perl/perl-module-install/PKGBUILD
+++ b/perl/perl-module-install/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-module-install
 pkgver=1.19
-pkgrel=5
+pkgrel=6
 pkgdesc="Module::Install - Standalone, extensible Perl module installer"
-arch=('any')
+arch=(any)
 url='https://search.cpan.org/dist/Module-Install'
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
