--- a/perl/perl-inline-cpp/PKGBUILD
+++ b/perl/perl-inline-cpp/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-inline-cpp
 pkgver=0.80
-pkgrel=4
+pkgrel=5
 pkgdesc="Write Perl subroutines and classes in C++"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Inline-CPP"
 depends=('perl-inline' 'perl-inline-c' 'perl-parse-recdescent')
