* update perl-acme-alien-dontpanic to 2.2900-5

--- a/perl/perl-acme-alien-dontpanic/PKGBUILD
+++ b/perl/perl-acme-alien-dontpanic/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-acme-alien-dontpanic
 pkgver=2.2900
-pkgrel=3
+pkgrel=5
 pkgdesc="Test Module for Alien::Base"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Acme-Alien-DontPanic"
 depends=('dontpanic' 'perl-alien-build')
