--- a/perl/perl-module-build/PKGBUILD
+++ b/perl/perl-module-build/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-module-build
 pkgver=0.4231
-pkgrel=5
+pkgrel=7
 pkgdesc="Build, test, and install Perl modules"
-arch=('any')
+arch=(any)
 url="https://search.cpan.org/dist/Module-Build"
 license=('PerlArtistic' 'GPL')
 depends=('perl' 'perl-cpan-meta' 'perl-inc-latest')
