--- a/perl/perl-io-socket-ssl/PKGBUILD
+++ b/perl/perl-io-socket-ssl/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-io-socket-ssl
 pkgver=2.074
-pkgrel=1
+pkgrel=2
 pkgdesc="Nearly transparent SSL encapsulation for IO::Socket::INET"
-arch=('any')
+arch=(any)
 license=('GPL' 'PerlArtistic')
 url="https://search.cpan.org/dist/IO-Socket-SSL/"
 depends=('perl-net-ssleay' 'perl' 'perl-uri')
