* update perl-anyevent to 4:7.17-5

--- a/perl/perl-anyevent/PKGBUILD
+++ b/perl/perl-anyevent/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=perl-anyevent
 pkgver=7.17
-pkgrel=4
+pkgrel=5
 epoch=4
 pkgdesc='The DBI of event loop programming'
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/AnyEvent"
 license=('PerlArtistic' 'GPL')
 depends=('perl')
