* update perl-perl4-corelibs to 0.004-8

--- a/perl/perl-perl4-corelibs/PKGBUILD
+++ b/perl/perl-perl4-corelibs/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-perl4-corelibs
 pkgver=0.004
-pkgrel=7
+pkgrel=8
 pkgdesc="Libraries historically supplied with Perl 4"
-arch=('any')
+arch=(any)
 url="https://metacpan.org/release/Perl4-CoreLibs"
 license=('PerlArtistic' 'GPL')
 depends=('perl')
