* update perl-test-utf8 to 1.01-6

--- a/perl/perl-test-utf8/PKGBUILD
+++ b/perl/perl-test-utf8/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=perl-test-utf8
 pkgver=1.01
-pkgrel=5
+pkgrel=6
 pkgdesc="handy utf8 tests"
-arch=('any')
+arch=(any)
 url='https://search.cpan.org/dist/Test-utf8'
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
