* update perl-perl-critic to 1.140-3

--- a/perl/perl-perl-critic/PKGBUILD
+++ b/perl/perl-perl-critic/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=perl-perl-critic
 pkgver=1.140
-pkgrel=2
+pkgrel=3
 pkgdesc="Critique Perl source code for best-practices"
-arch=('any')
+arch=(any)
 license=('PerlArtistic')
 url="https://metacpan.org/release/Perl-Critic"
 depends=('perl-b-keywords' 'perl-config-tiny' 'perl-exception-class' 'perl-file-homedir'
