* update openssl to 1.1.1.o-1

--- a/openssl/PKGBUILD
+++ b/openssl/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=openssl
-_ver=1.1.1n
+_ver=1.1.1o
 # use a pacman compatible version scheme
 pkgver=${_ver/[a-z]/.${_ver//[0-9.]/}}
 pkgrel=1
@@ -17,11 +17,11 @@ replaces=('openssl-perl' 'openssl-doc')
 backup=('etc/ssl/openssl.cnf')
 source=("https://www.openssl.org/source/${pkgname}-${_ver}.tar.gz"{,.asc}
 	'ca-dir.patch')
-sha256sums=('40dceb51a4f6a5275bde0e6bf20ef4b91bfc32ed57c0552e2e8e15463372b17a'
+sha256sums=('9384a2b0570dd80358841464677115df785edb941c71211f75076d72fe6b438f'
             'SKIP'
             '75aa8c2c638c8a3ebfd9fa146fc61c7ff878fc997dc6aa10d39e4b2415d669b2')
 validpgpkeys=('8657ABB260F056B1E5190839D9C4D26D0E604491'
-              '7953AC1FBC3DC8B3B292393ED5E9E43F7DF9EE8C')
+	'7953AC1FBC3DC8B3B292393ED5E9E43F7DF9EE8C')
 
 # bring pod2man into path
 export PATH=$PATH:/usr/bin/core_perl
@@ -32,14 +32,14 @@ case "${CARCH}" in
     BUILD_OPTIONS="no-asm"
   ;;
   powerpc64le)
-    BUILD_TYPE="linux-ppc64le"
-    BUILD_OPTIONS="enable-ec_nistp_64_gcc_128"
-  ;;
+     BUILD_TYPE="linux-ppc64le"
+     BUILD_OPTIONS="enable-ec_nistp_64_gcc_128"
+   ;;
   riscv64)
-    BUILD_TYPE="linux64-riscv64"
-    BUILD_OPTIONS=""
-  ;;
-  x86_64) 
+     BUILD_TYPE="linux64-riscv64"
+     BUILD_OPTIONS=""
+   ;;
+  x86_64)
     BUILD_TYPE="linux-x86_64"
   ;;
 esac
@@ -52,7 +52,7 @@ prepare() {
 }
 
 build() {
-      cd "$srcdir/$pkgname-$_ver"
+	cd "$srcdir/$pkgname-$_ver"
 
 	# mark stack as non-executable: http://bugs.archlinux.org/task/12434
 	./Configure --prefix=/usr --openssldir=/etc/ssl --libdir=lib \
@@ -80,7 +80,7 @@ check() {
 package() {
 	cd "$srcdir/$pkgname-$_ver"
 
-	make DESTDIR=$pkgdir MANDIR=/usr/share/man MANSUFFIX=ssl install_sw install_ssldirs install_man_docs
+	make DESTDIR="$pkgdir" MANDIR=/usr/share/man MANSUFFIX=ssl install_sw install_ssldirs install_man_docs
 
-	install -D -m644 LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE
+	install -D -m644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
