* update man2html to 3.0.1-8

--- a/man2html/PKGBUILD
+++ b/man2html/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=man2html
 pkgver=3.0.1
-pkgrel=7
+pkgrel=8
 pkgdesc="A Unix manpage-to-HTML converter"
-arch=('any')
+arch=(any)
 url="https://www.nongnu.org/man2html/"
 license=('GPL')
 depends=('man-db' 'perl')
