--- a/hyphen/PKGBUILD
+++ b/hyphen/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=hyphen
 pkgname=('hyphen' 'hyphen-en')
 pkgver=2.8.8
-pkgrel=3
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://hunspell.sf.net"
 license=('GPL2' 'LGPL2.1' 'MPL')
@@ -14,7 +14,7 @@ sha1sums=('0556c392beb59433e577e3517575801212201df6')
 
 build() {
   cd "$pkgname"-$pkgver
-  ./configure --build=$CHOST --prefix=/usr --disable-static
+  ./configure --prefix=/usr --disable-static --build=$CHOST
   make
 }
 
@@ -33,7 +33,7 @@ package_hyphen() {
 
 package_hyphen-en() {
  pkgdesc="English hyphenation rules"
- # arch=(x86_64 powerpc64le)
+ # arch=('any')
  optdepends=('hyphen: offers hyphenation library functions')
 
   cd "$pkgbase"-$pkgver
