--- a/libmythes/PKGBUILD
+++ b/libmythes/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=libmythes
 pkgver=1.2.4
-pkgrel=4
+pkgrel=5
 epoch=1
 pkgdesc="a simple thesaurus"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://hunspell.github.io/"
 license=('custom')
 depends=('glibc' 'perl')
@@ -18,6 +18,7 @@ sha512sums=('a04da39812bcfb1391a2cba7de73e955eafe141679ec03ed6657d03bebf360b4324
 build() {
   cd "${pkgname/lib/}"-$pkgver
   ./configure --prefix=/usr --disable-static --build=${CHOST}
+  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
