--- a/texi2html/PKGBUILD
+++ b/texi2html/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=texi2html
 pkgver=5.0
-pkgrel=6
+pkgrel=7
 pkgdesc="Converts texinfo documents to HTML"
-arch=('any')
+arch=(any)
 url="https://www.nongnu.org/texi2html/"
 license=('GPL')
 depends=('perl')
