--- a/libqalculate/PKGBUILD
+++ b/libqalculate/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libqalculate
-pkgver=4.1.1
-pkgrel=2
+pkgver=4.2.0
+pkgrel=1
 pkgdesc='Multi-purpose desktop calculator'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://qalculate.github.io/'
@@ -13,7 +13,8 @@ depends=(libxml2 curl mpfr)
 makedepends=(intltool doxygen)
 optdepends=('gnuplot: for plotting support')
 source=(https://github.com/Qalculate/libqalculate/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('b5611a91293be40fbe8723a81937e25ffb54e6ad6e60f282d044ed92f2d97002')
+sha256sums=('2b86e656508f0b1c55236b08fd579b676563e1500b3db8304580de69c5693e4b')
+options=(debug)
 
 build() {
   cd $pkgname-$pkgver
