* update libjpeg-turbo to 2.1.3-2

--- a/libjpeg-turbo/PKGBUILD
+++ b/libjpeg-turbo/PKGBUILD
@@ -1,4 +1,3 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: David Runge <dvzrv@archlinux.org>
 # Contributor: Gaetan Bisson <bisson@archlinux.org>
 # Contributor: Allan McRae <allan@archlinux.org>
@@ -6,14 +5,14 @@
 
 pkgname=libjpeg-turbo
 pkgver=2.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="JPEG image codec with accelerated baseline compression and decompression"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libjpeg-turbo.org/"
 license=(BSD)
 depends=(glibc)
-makedepends=(cmake 'java-environment')
-makedepends_x86_86=(nasm)
+makedepends=(cmake 'java-environment=11')
+makedepends_x86_64=(nasm)
 optdepends=('java-runtime>11: for TurboJPEG Java wrapper')
 provides=(libjpeg libjpeg.so libturbojpeg.so)
 options=(debug)
@@ -28,6 +27,7 @@ build() {
   cmake -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_INSTALL_LIBDIR=/usr/lib \
         -DCMAKE_BUILD_TYPE=None \
+        -DENABLE_STATIC=OFF \
         -DWITH_JAVA=ON \
         -DWITH_JPEG8=ON \
         -W no-dev \
