--- a/ninja/PKGBUILD
+++ b/ninja/PKGBUILD
@@ -5,22 +5,21 @@
 # Contributor: Gergely Imreh <imrehgATgmailDOTcom>
 
 pkgname=ninja
-pkgver=1.10.2
-pkgrel=2
+pkgver=1.11.0
+pkgrel=1
 pkgdesc='Small build system with a focus on speed'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://ninja-build.org/'
 license=(Apache)
 depends=(gcc-libs)
-makedepends=(python re2c) #emacs-nox)
+makedepends=(python re2c)
 source=($pkgname-$pkgver.zip::https://github.com/martine/ninja/archive/v$pkgver.zip)
-sha1sums=('8415866400a85a1ced2140e52c5db714baec7444')
+sha1sums=('e2de757c4dfa38985b348863b43e2609b56ad305')
 
 build() {
   cd ninja-$pkgver
 
   python configure.py --bootstrap
-  #emacs -Q --batch -f batch-byte-compile misc/ninja-mode.el
 }
 
 check() {
@@ -39,7 +38,6 @@ package() {
   install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 
   install -m644 -D misc/ninja-mode.el "$pkgdir/usr/share/emacs/site-lisp/ninja-mode.el"
-  #install -m644 -D misc/ninja-mode.elc "$pkgdir/usr/share/emacs/site-lisp/ninja-mode.elc"
   install -m644 -D misc/ninja.vim "$pkgdir/usr/share/vim/vimfiles/syntax/ninja.vim"
 
   install -m644 -D misc/bash-completion "$pkgdir/usr/share/bash-completion/completions/ninja"
