--- a/xorg/xcb-util-image/PKGBUILD
+++ b/xorg/xcb-util-image/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xcb-util-image
 pkgver=0.4.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Utility libraries for XC Binding - Port of Xlib's XImage and XShmImage functions"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xcb.freedesktop.org"
@@ -16,7 +16,7 @@ sha512sums=('9b7202c054e1160f9ca97a86be1210d9fb47f2119f89ca85f15f20909cca884bfe0
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-static --buil=${CHOST}
+  ./configure --prefix=/usr --disable-static --build=${CHOST}
   make
 }
 
