--- a/xorg/xcb-util/PKGBUILD
+++ b/xorg/xcb-util/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=xcb-util
 pkgver=0.4.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Utility libraries for XC Binding"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xcb.freedesktop.org"
@@ -17,7 +17,7 @@ sha512sums=('e60aaa6f582eacd05896c5fd7c8417938318a1288146f3a5b339f77eed24e211c60
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-static --buil=${CHOST}
+  ./configure --prefix=/usr --disable-static --build=${CHOST}
   make
 }
 
