--- a/xorg/xcb-util-renderutil/PKGBUILD
+++ b/xorg/xcb-util-renderutil/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xcb-util-renderutil
 pkgver=0.3.9
-pkgrel=3
+pkgrel=4
 pkgdesc="Utility libraries for XC Binding - Convenience functions for the Render extension"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xcb.freedesktop.org"
@@ -18,7 +18,7 @@ sha512sums=('24b567992ecde7e69a406efd0ffb62266610d73b4dc0e5c71093221090fa134c14b
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-static --buil=${CHOST}
+  ./configure --prefix=/usr --disable-static --build=${CHOST}
   make
 }
 
