* update xbitmaps to 1.1.2-3

--- a/xorg/xbitmaps/PKGBUILD
+++ b/xorg/xbitmaps/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=xbitmaps
 pkgver=1.1.2
-pkgrel=2
+pkgrel=3
 pkgdesc="X.org Bitmap files"
-arch=('any')
+arch=(any)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 makedepends=('xorg-util-macros')
