* update xterm to 372-2

--- a/xorg/xterm/PKGBUILD
+++ b/xorg/xterm/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xterm
 pkgver=372
-pkgrel=1
+pkgrel=2
 pkgdesc="X Terminal Emulator"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://invisible-island.net/xterm/"
@@ -43,7 +43,7 @@ build() {
       --enable-mini-luit \
       --enable-narrowproto \
       --enable-exec-xterm \
-      --disable-sixel-graphics \
+      --enable-sixel-graphics \
       --enable-regis-graphics \
       --with-tty-group=tty \
       --with-utempter
