* update python-setuptools to 1:60.6.0-1

--- a/python/python-setuptools/PKGBUILD
+++ b/python/python-setuptools/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Eli Schwartz <eschwartz@archlinux.org>
 
 pkgname=python-setuptools
-pkgver=59.5.0
+pkgver=60.6.0
 pkgrel=1
 epoch=1
 pkgdesc="Easily download, build, install, upgrade, and uninstall Python packages"
@@ -14,13 +14,13 @@ url="https://pypi.org/project/setuptools/"
 depends=('python-appdirs' 'python-more-itertools' 'python-ordered-set' 'python-packaging'
          'python-pyparsing')
 makedepends=('git' 'python-setuptools')
-checkdepends=('python-jaraco.envs' 'python-jaraco.path' 'python-mock' 'python-pip'
+checkdepends=('python-jaraco.envs' 'python-jaraco.path' 'python-mock' 'python-pip' 'python-pip-run'
               'python-pytest-fixture-config' 'python-pytest-flake8' 'python-pytest-virtualenv'
-              'python-wheel' 'python-paver' 'python-pytest-cov' 'python-sphinx')
+              'python-wheel' 'python-paver' 'python-pytest-cov' 'python-sphinx' 'python-build')
 provides=('python-distribute')
 replaces=('python-distribute')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/pypa/setuptools/archive/v$pkgver.tar.gz")
-sha512sums=('65720b040ae9fc356d66fc74dadeec8456d4dc415cde88efc61c86d932bf0e00865b1bd56c3371d40be64c3a8ac1595543c7ff13d1b1b1c1133ca13f0b353a74')
+sha512sums=('29685c27cb9ebd0a8ab9673f449f7ec0c71f29e724bc19055a2a5c5cceb323c33f1dd79ef6f11b94af232c6103bdf23cff18812e3f6cef014b2fc344fe2f9f17')
 
 export SETUPTOOLS_INSTALL_WINDOWS_SPECIFIC_FILES=0
 
@@ -75,7 +75,10 @@ check() { (
   export PYTHONDONTWRITEBYTECODE=1
 
   cd setuptools-$pkgver
-  python -m pytest --deselect setuptools/tests/test_distutils_adoption.py
+  SETUPTOOLS_USE_DISTUTILS=stdlib python -m pytest \
+    --deselect setuptools/tests/test_distutils_adoption.py \
+    --deselect setuptools/tests/integration/test_pip_install_sdist.py \
+    --deselect setuptools/tests/test_setuptools.py::test_its_own_wheel_does_not_contain_tests
 )}
 
 package() {
