* update python-cryptography-vectors to 37.0.2-1

--- a/python/python-cryptography-vectors/PKGBUILD
+++ b/python/python-cryptography-vectors/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-cryptography-vectors
-pkgver=36.0.2
+pkgver=37.0.2
 pkgrel=1
 pkgdesc="Test vectors for the cryptography package"
-arch=('any')
+arch=(any)
 license=('Apache')
 url="https://pypi.python.org/pypi/cryptography-vectors"
 depends=('python')
 makedepends=('python-setuptools')
 source=("https://pypi.io/packages/source/c/cryptography-vectors/cryptography_vectors-$pkgver.tar.gz")
-sha512sums=('b7725a92191312686a0fdc0fcdb8f1ecba5ccfe249b3d6eebb5675bb5efd7bce6a424a4eef94dade0ab21415a952caee3c3d4624dade9d5de492be9e7175d623')
+sha512sums=('320a4c13f076d6d7bef0437b8b57a76496c51d0266c9958aaeadf73e9d07510e1219f3fa08aee1b30cb6122daf4c0b85538c5be95f1dbd450bacb8cbe464892b')
 
 package() {
    cd cryptography_vectors-$pkgver
