--- a/python/python-more-itertools/PKGBUILD
+++ b/python/python-more-itertools/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=python-more-itertools
 pkgver=8.12.0
-pkgrel=1
+pkgrel=2
 pkgdesc='More routines for operating on iterables, beyond itertools'
-arch=('any')
+arch=(any)
 url='https://github.com/erikrose/more-itertools'
 #url='https://pypi.python.org/pypi/more-itertools'
 license=('MIT')
