--- a/python/python-dulwich/PKGBUILD
+++ b/python/python-dulwich/PKGBUILD
@@ -4,7 +4,7 @@
 
 _name=dulwich
 pkgname=python-dulwich
-pkgver=0.20.35
+pkgver=0.20.42
 pkgrel=1
 pkgdesc='Pure-Python implementation of the Git file formats and protocols'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,15 +12,16 @@ url=https://www.dulwich.io
 license=('GPL')
 depends=('python-certifi' 'python-urllib3')
 makedepends=('python-setuptools')
-checkdepends=('python-gpgme')
+checkdepends=('python-gpgme' 'python-paramiko')
 optdepends=('python-fastimport: for fast-import support'
             'python-gpgme: for PGP signature support'
             'python-idna: for HTTPS support via urllib3'
+            'python-paramiko: for use as the SSH implementation'
             'python-pyopenssl: for HTTPS support via urllib3'
             'python-pyinotify: to watch for changes to refs')
 source=("https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
-sha256sums=('953f6301a9df8a091fa88d55eed394a88bf9988cde8be341775354910918c196')
-b2sums=('97c877554199aa8f3abf2f95a43c350cbef784f6f71af6280c537a93297c89981190fe1f66914532641a99cc3dca82a33b43d09f864f2ddf370c0097fa28a5e0')
+sha256sums=('72ba3b60ae6a554d1332b3b40a345febe16ec469cf6014bb443b719902e33ef0')
+b2sums=('b7373e2db7616cc696c94f19dccf2a1d93ce1d260419e1ce7b2d09b402f9f051125fb72d6fb79147ce73377667ddc258a37ff057ec485a27a46319ed30b11640')
 
 build() {
   cd $_name-$pkgver
