* update python-pytest-asyncio to 0.18.0-1

--- a/python/python-pytest-asyncio/PKGBUILD
+++ b/python/python-pytest-asyncio/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-pytest-asyncio
-pkgver=0.17.1
+pkgver=0.18.0
 pkgrel=1
 pkgdesc="Pytest support for asyncio."
-arch=('any')
+arch=(any)
 license=('Apache')
 url="https://github.com/pytest-dev/pytest-asyncio/"
-depends=('python-pytest' 'python-typing_extensions')
+depends=('python-pytest')
 makedepends=('python-setuptools-scm')
 checkdepends=('python-flaky' 'python-hypothesis')
 source=("https://github.com/pytest-dev/pytest-asyncio/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('691bedb0d84e05179815d9a5c11108568dc59fc8fe6e8549e54e14b83e5e6bcad37d512980ea27f87f927f623c0496bbddf0aff1f44fc78f9bea1d9106b0800c')
+sha512sums=('af57e1a2b9306841fdf75c38691a2e8e5df3909103707e8698bac07aba94ebd70477ae847a6d9b813d2acbb7efeb13fe7df1f812a3926990e373ddeefd20bd3c')
 
 export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 
