--- a/python/python-flit/PKGBUILD
+++ b/python/python-flit/PKGBUILD
@@ -5,23 +5,19 @@
 _pkgname=flit
 pkgbase=python-$_pkgname
 pkgname=($pkgbase{,-core})
-pkgver=3.5.1
-pkgrel=3
+pkgver=3.7.1
+pkgrel=1
 pkgdesc='Simplified packaging of Python modules'
-arch=('any')
+arch=(any)
 url='https://github.com/takluyver/flit'
 license=('BSD')
-depends=('python' 'python-tomli' 'python-tomli-w' 'python-cryptography')
-makedepends=('python-requests' 'python-docutils')
+depends=('python' 'python-tomli' 'python-tomli-w')
+makedepends=('python-pip' 'python-poetry' 'python-requests' 'python-docutils')
 checkdepends=('python-pytest' 'python-testpath' 'python-responses')
 source=("$pkgbase-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz")
-sha512sums=('76a713df9a85e686b5a9516b01b02779ce9e62e5bb189724d4fb62c42324ce1607d9de334c1fa88e95a10089aebba804fac0214fcbed0c47b8fc057732d63339')
+sha512sums=('e38162696a24a0f8d9a61f3364c2ada9c8024309b02138af66c53790e14f88bf285822ea85d6634e85f88d9712eaad039bb5dcbbd1ac1f87bce6b2790bd96d6f')
 
 prepare() {
-  curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py
-  sudo python get-pip.py
-  sudo pip install poetry
-
   cd $_pkgname-$pkgver
   rm tests/test_sdist.py
   cd flit_core
