--- a/python/python-oslo-utils/PKGBUILD
+++ b/python/python-oslo-utils/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Daniel Wallace <danielwallace at gtmanfred dot com>
 
 pkgname=python-oslo-utils
-pkgver=4.10.0
-pkgrel=3
+pkgver=4.11.0
+pkgrel=1
 pkgdesc="Oslo Utility library"
-arch=('any')
+arch=(any)
 url="https://pypi.python.org/pypi/oslo.utils/$pkgver"
 license=('Apache')
 depends=('python-pbr' 'python-iso8601' 'python-oslo-i18n' 'python-pytz' 'python-netaddr'
@@ -14,7 +14,7 @@ depends=('python-pbr' 'python-iso8601' 'python-oslo-i18n' 'python-pytz' 'python-
 makedepends=('python-setuptools')
 checkdepends=('python-oslotest' 'python-ddt' 'python-eventlet')
 source=("https://github.com/openstack/oslo.utils/archive/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('41bc7050add0778c8b3cc662ac346f0f4c7e3ab8fc2de53a3466df2258651ca4124c5008e9e6d7ac655085991d4a5f1f400634915f1d68046dd18f4a0c0faeb4')
+sha512sums=('68aca1f9312cc890e24fb06f349c1eb601f0052250153a5cdad8587eda96a0dd21ae578a154e0b29e2eab791a9b597b1106bbe01520284ffb96cfc351c3a0c0e')
 
 export PBR_VERSION=$pkgver
 
