* update python-oslo-log to 5.0.0-1

--- a/python/python-oslo-log/PKGBUILD
+++ b/python/python-oslo-log/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Daniel Wallace <danielwallace at gtmanfred dot com>
 
 pkgname=python-oslo-log
-pkgver=4.7.0
+pkgver=5.0.0
 pkgrel=1
 pkgdesc="Oslo Logging Library"
-arch=('any')
+arch=(any)
 url="https://pypi.python.org/pypi/oslo.log/$pkgver"
 license=('Apache')
 depends=('python-pbr' 'python-oslo-config' 'python-oslo-context' 'python-oslo-i18n'
@@ -15,7 +15,7 @@ depends=('python-pbr' 'python-oslo-config' 'python-oslo-context' 'python-oslo-i1
 makedepends=('python-setuptools')
 checkdepends=('python-oslotest')
 source=("https://github.com/openstack/oslo.log/archive/$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('085768f53d5e9dd0974eceb64e289096ff4e04fbe093960eb54211f088f20b1cb5856384a602196780c0527a0e23f53ded8414a49d073bd81b0dc99f7728c636')
+sha512sums=('aa381095efbbb6fc4919d21baa41985efacc119ceeb345502a6b65ded6ebf6b95652788f0e45ec80461f2e23b8622627327c64d511e62775f0c70008b9b595d7')
 
 export PBR_VERSION=$pkgver
 
