* update subversion to 1.14.1-6

--- a/subversion/PKGBUILD
+++ b/subversion/PKGBUILD
@@ -7,15 +7,16 @@
 
 pkgname=subversion
 pkgver=1.14.1
-pkgrel=5
+pkgrel=6
 pkgdesc="A Modern Concurrent Version Control System"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://subversion.apache.org/"
 license=('APACHE')
 depends=('file' 'libutf8proc' 'serf' 'sqlite' 'systemd')
-makedepends=('apache' 'python' 'python-py3c' 'perl' 'swig' 'java-environment=11'
-             'libgnome-keyring' 'libsecret' 'ruby')
+makedepends=('apache' 'python' 'python-py3c' 'perl' 'swig' 'java-environment>=8'
+             'libgnome-keyring' 'kwallet' 'kdelibs4support' 'ruby')
 optdepends=('libgnome-keyring: for GNOME Keyring for auth credentials'
+            'kwallet: for KWallet for auth credentials'
             'bash-completion: for svn bash completion'
             'python: for some hook scripts'
             'java-environment: for Java support'
@@ -65,11 +66,10 @@ build() {
    cd ${pkgname}-${pkgver}
    ./configure --prefix=/usr --with-apxs \
                --enable-javahl --with-jdk=/usr/lib/jvm/default \
-               --with-gnome-keyring --without-kwallet \
+               --with-gnome-keyring --with-kwallet \
                --with-apache-libexecdir=/usr/lib/httpd/modules \
                --with-ruby-sitedir=/usr/lib/ruby/vendor_ruby \
-               --disable-static \
-               --with-jdk=/usr/lib/jvm/java-11-openjdk
+               --disable-static
 
    make LT_LDFLAGS="-L$Fdestdir/usr/lib"
    make swig_pydir=/usr/lib/python3.10/site-packages/libsvn \
